Remove log directory and add to gitignore